--- a/client/src/templates/teamPage.hbs
+++ b/client/src/templates/teamPage.hbs
@@ -7,5 +7,9 @@
     <li>Lam</li>
     <li>Jessie</li>
 	<li>Akshay</li>
+	<li>Bernardo</li>
+	<li>Brandon</li>
+	<li>Minoli</li>
+	<li>Nimisha</li>
 </ul>
 
