--- a/client/src/templates/gamePage.hbs
+++ b/client/src/templates/gamePage.hbs
@@ -1,4 +1,4 @@
 <h1>Game Page</h1>
 <p>Option1</p>
+<img src="./src/images">
 <p>Option2</p>
-<img src="https://png.pngtree.com/element_pic/00/03/75/34568be81f30237.jpg">
