--- a/client/src/templates/gamePage.hbs
+++ b/client/src/templates/gamePage.hbs
@@ -1,3 +1,3 @@
-<p>{{correctOption}}</p>
-<img src={{image}}>
-<p>{{incorrectOption}}</p>
+<p class="option">{{correctOption}}</p>
+<img class="animalImg" src={{image}}>
+<p class="option option2">{{incorrectOption}}</p>
