[Akshay/Jessie] Changing message

--- a/client/src/styles/pages/home.scss
+++ b/client/src/styles/pages/home.scss
@@ -42,14 +42,13 @@
 }
 .try{
     position: absolute;
-    top: 40%;
+    top: 37%;
     font-size: 25px;
     font-weight: bold;
-    text-transform: uppercase;
-    left: 26%;
+    left: 14%;
 	}
 .try{
-	color: red;
+	color: #ff6100;
 }
 .success{
 	color:#40cc20;
